# templates

./: CMakeCache.txt  CMakeLists.txt  Makefile  allocators.hpp  array.hpp  array_dbg  array_dbg.cpp  cmake_install.cmake  compile_commands.json  implementation.hpp  lol.py  on_heap.hpp  on_stack.hpp  out.txt  play  play.cpp  vector.hpp  vector_dbg.cpp
debug/: CMakeLists.txt  Makefile  cmake_install.cmake  dbg.cpp
debug/includes/: dbg.hpp
outdated/: vector.hpp
